# internal/handlers/http/task.go
@@ -37,6 +37,13 @@ func (h *TaskHandler) Routes() chi.Router {
 	return r
 }
 
+// @Summary	List of tasks from the repository
+// @Tags		tasks
+// @Accept		json
+// @Produce	json
+// @Success	200	{array}		db.Task
+// @Failure	500	{object}	response.Object
+// @Router		/tasks [get]
 func (h *TaskHandler) list(w http.ResponseWriter, r *http.Request) {
 	tasks, err := h.db.ListTasks(r.Context())
 	if err != nil {
@@ -46,6 +53,15 @@ func (h *TaskHandler) list(w http.ResponseWriter, r *http.Request) {
 	response.OK(w, r, tasks)
 }
 
+// @Summary	Add a new task to the repository
+// @Tags		tasks
+// @Accept		json
+// @Produce	json
+// @Param		request	body		db.CreateTaskParams	true	"Task details"
+// @Success	200		{object}	db.Task
+// @Failure	400		{object}	response.Object
+// @Failure	500		{object}	response.Object
+// @Router		/tasks [post]
 func (h *TaskHandler) add(w http.ResponseWriter, r *http.Request) {
 	var req db.CreateTaskParams
 	if err := json.NewDecoder(r.Body).Decode(&req); err != nil {
@@ -62,6 +78,15 @@ func (h *TaskHandler) add(w http.ResponseWriter, r *http.Request) {
 	response.OK(w, r, task)
 }
 
+// @Summary	Get a task from the repository
+// @Tags		tasks
+// @Accept		json
+// @Produce	json
+// @Param		id	path		int	true	"Task ID"
+// @Success	200	{object}	db.Task
+// @Failure	404	{object}	response.Object
+// @Failure	500	{object}	response.Object
+// @Router		/tasks/{id} [get]
 func (h *TaskHandler) get(w http.ResponseWriter, r *http.Request) {
 	id, err := strconv.ParseInt(chi.URLParam(r, "id"), 10, 64)
 	if err != nil {
@@ -82,6 +107,17 @@ func (h *TaskHandler) get(w http.ResponseWriter, r *http.Request) {
 	response.OK(w, r, task)
 }
 
+// @Summary	Update a task in the repository
+// @Tags		tasks
+// @Accept		json
+// @Produce	json
+// @Param		id		path		int						true	"Task ID"
+// @Param		request	body		db.UpdateTaskParams	true	"Task details"
+// @Success	200		{object}	db.Task
+// @Failure	400		{object}	response.Object
+// @Failure	404		{object}	response.Object
+// @Failure	500		{object}	response.Object
+// @Router		/tasks/{id} [put]
 func (h *TaskHandler) update(w http.ResponseWriter, r *http.Request) {
 	id, err := strconv.ParseInt(chi.URLParam(r, "id"), 10, 64)
 	if err != nil {
@@ -110,6 +146,15 @@ func (h *TaskHandler) update(w http.ResponseWriter, r *http.Request) {
 	response.OK(w, r, task)
 }
 
+// @Summary	Delete a task from the repository
+// @Tags		tasks
+// @Accept		json
+// @Produce	json
+// @Param		id	path		int	true	"Task ID"
+// @Success	204	{object}	response.Object
+// @Failure	404	{object}	response.Object
+// @Failure	500	{object}	response.Object
+// @Router		/tasks/{id} [delete]
 func (h *TaskHandler) delete(w http.ResponseWriter, r *http.Request) {
 	id, err := strconv.ParseInt(chi.URLParam(r, "id"), 10, 64)
 	if err != nil {
